# nar_database

./: .gitignore  COPILOT_INSTRUCTIONS.md  PROJECT_PLAN.md  README.md  SQLITE_SETUP.md  performance_improvements.py  pyproject.toml  requirements.txt  setup.py  test_corrected_postal.py  test_postal.py
docs/: PARQUET_SETUP.md  SQLITE_SETUP.md  data_dictionary.md  index.html  usage.md
docs/css/: style.css
docs/data/parquet/: NARdictionary.txt  _metadata.json
docs/data/parquet/province=NT/: part-0.parquet
docs/data/parquet/province=UNKNOWN/: part-0.parquet
docs/js/: app.js
src/: DRSprovinces.json
src/nar_database/: __init__.py  cli.py  database.py  downloader.py  parquet_exporter.py  processor.py  processor_optimized.py
tests/: test_downloader.py  test_parquet_exporter.py
