[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nar-database"
version = "0.1.0"
description = "Download and process Statistics Canada's National Address Register into a local SQLite database"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["canada", "addresses", "statistics-canada", "database", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "click>=8.0.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]
parquet = [
    "pyarrow>=12.0.0",
    "fastparquet>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/GCOrgName/nar_database"
"Bug Reports" = "https://github.com/GCOrgName/nar_database/issues"
"Source" = "https://github.com/GCOrgName/nar_database"

[project.scripts]
nar-db = "nar_database.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
